--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.exe
+.exe~
+.dll
+.so
+.dylib
 
 # Test binary, built with `go test -c`
-*.test
+.test
 
 # Code coverage profiles and other test artifacts
 *.out
@@ -29,4 +26,4 @@ go.work.sum
 
 # Editor/IDE
 # .idea/
-# .vscode/
+.vscode/
