--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,31 +1,50 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: Build and Release
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-
   build:
+    name: Build and Release for All Platforms
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write  # Needed to create releases and upload assets
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.24'
 
-    - name: Install Dependencies
-      run: go get .
+    - name: Set release version
+      id: version
+      run: |
+        VERSION="v$(date +'%Y.%m.%d.%H%M%S')"
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build for Linux
+      run: |
+        GOOS=linux GOARCH=amd64 go build -o myapp-linux
+    - name: Build for Windows
+      run: |
+        GOOS=windows GOARCH=amd64 go build -o myapp-windows.exe
+    - name: Build for macOS
+      run: |
+        GOOS=darwin GOARCH=amd64 go build -o myapp-macos
 
-    - name: Test
-      run: go test -v ./...
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ steps.version.outputs.version }}
+        name: Release ${{ steps.version.outputs.version }}
+        files: |
+          myapp-linux
+          myapp-windows.exe
+          myapp-macos
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
