--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: CI / CD
+name: Build and Release
 
 on:
   push:
@@ -9,6 +9,7 @@ on:
 jobs:
 
   test:
+    runs-on: ubuntu-latest
     name: Tests
     steps:
       - uses: actions/checkout@v4
