--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,29 +2,12 @@ name: Build and Release
 
 on:
   push:
-    branches: [ "**" ]
-  pull_request:
-    branches: [ "**" ]
+    branches: [ "main" ]
 
 jobs:
-
-  test:
-    runs-on: ubuntu-latest
-    name: Tests
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.24'
-      - name: Run Tests
-        run: go test -v ./...
-
-        
-
   build:
     name: Build and Release for All Platforms
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     permissions:
       contents: write  
