--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           go-version: '1.24'
       - name: Run Tests
-        run: go test -v ./...WWWWWWWW
+        run: go test -v ./...
