--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Binaries for programs and plugins
-.exe
-.exe~
-.dll
-.so
-.dylib
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
 # Test binary, built with `go test -c`
 .test
@@ -29,4 +29,3 @@ go.work.sum
 .vscode/
 secrets.gob
 static/*
-auto2.exe
