Added version info to UI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,16 +47,18 @@ jobs:
 
     - name: Build for Linux
       run: |
-        GOOS=linux GOARCH=amd64 go build -o AutoTickets-Linux
+        VERSION=$
+        {{ steps.version.outputs.version}}
+        GOOS=linux GOARCH=amd64 go build -ldflags="-X 'main.version=$VERSION'" -o AutoTickets-Linux 
     - name: Build for Windows
       run: |
-        GOOS=windows GOARCH=amd64 go build -o AutoTickets.exe
+        GOOS=windows GOARCH=amd64 go build -ldflags="-X 'main.version=$VERSION'" -o AutoTickets.exe
     - name: Build for macOS (intel)
       run: |
-        GOOS=darwin GOARCH=amd64 go build -o AutoTickets-Mac-Intel
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-X 'main.version=$VERSION'" -o AutoTickets-Mac-Intel
     - name: Build for macOS (arm)
       run: |
-        GOOS=darwin GOARCH=arm64 go build -o AutoTickets-Mac-Arm
+        GOOS=darwin GOARCH=arm64 go build -ldflags="-X 'main.version=$VERSION'" -o AutoTickets-Mac-Arm
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
